<resources>
    <string name="app_name">照片墙</string>
    <string name="picture_wall">照片墙</string>
    <string name="book_list">书   单</string>
    <string name="share_to">分享至</string>
    <string name="wechat">微信</string>
    <string name="friend_circle">朋友圈</string>
    <string name="qq_zone">QQ空间</string>
    <string name="cancel">取消</string>
    <string name="sorry_no_install_wechat">未安装微信</string>
    <string name="share_title">分享小标题</string>
    <string name="share_sub_title">分享副标题</string>

    <string name="no_support_emoji_character">不支持输入Emoji表情符号</string>
    <string name="change_btn_name">修改按钮名称</string>
    <string name="hint_add_group">请输入</string>
    <string name="confirm">确定</string>
    <string name="custom_dialog">弹框</string>

    <string name="search_range_finder">搜索测距仪</string>
    <string name="not_connected">未连接</string>
    <string name="not_link_bluetooth_note">点击扫描可用设备</string>
</resources>
