<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginEnd="@dimen/dp_30"
    android:layout_marginLeft="@dimen/dp_30"
    android:layout_marginRight="@dimen/dp_30"
    android:layout_marginStart="@dimen/dp_30"
    android:background="@drawable/shape_border_white_normal"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/change_btn_name"
        android:textColor="@color/normal_black_1"
        android:textSize="@dimen/sp_16"/>

    <View
        android:layout_width="@dimen/dp_10"
        android:layout_height="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_3"
        android:background="@color/orange"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginBottom="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/shape_gary_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.ydm.explore.widget.EditTextWithClear
            android:id="@+id/et_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_add_group"
            android:imeOptions="actionDone"
            android:paddingLeft="@dimen/dp_16"
            android:paddingStart="@dimen/dp_16"
            android:singleLine="true"
            android:textColor="@color/normal_black_2"
            android:textColorHint="@color/normal_black_3"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_1"
        android:background="@color/weak_color_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/normal_black_3"
            android:textSize="@dimen/sp_15"/>

        <View
            android:layout_width="@dimen/px_1"
            android:layout_height="match_parent"
            android:background="@color/weak_color_dark"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/orange"
            android:textSize="@dimen/sp_15"/>
    </LinearLayout>

</LinearLayout>